# GALib-Parallel

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  GEMINI.md  README.md
.github/workflows/: doxygen.yml
benchmarks/: README.md  benchmark_plot.py  benchmark_runner.cpp
cmake/: GALibConfig.cmake.in
configs/: config_de.yaml  config_example.yaml  config_standard.yaml  config_standard_cuda.yaml  config_standard_cuda_viz.yaml  full_config_example.yaml  mega_heavy_openmp.yaml  minimal_config.yaml  viz_rastrigin_cuda.yaml
configs/other/: bench_scaling.yaml  config_island.yaml  mega_heavy_cuda.yaml  viz_rastrigin.yaml  viz_rastrigin_de.yaml  viz_sphere.yaml
doc/: config.md
examples/: benchmark_ga_cuda.cpp  cellular_ga_example.cpp  custom_function_example.cpp  differential_evolution_example.cpp  island_example.cpp  island_ga_example.cpp  main.cpp  minimal_user_example.cpp  standard_ga_cuda_example.cpp  standard_ga_example.cpp  test_ga_cuda.cpp
include/algorithms/: Algorithm.h  AlgorithmConfig.h  CellularGA.h  StandardGA.h  StandardGACUDA.h
include/algorithms/cellular/: CellularGA.h  CellularGAParams.h
include/algorithms/cellular/selection/: BestNeighborSelection.h  LocalSelection.h
include/algorithms/differential-evolution/: DEParams.h  DifferentialEvolutionGA.h
include/algorithms/island/: IslandConfig.h  IslandGA.h  IslandGAParams.h
include/algorithms/island/communication/buffers/: CircularBuffer.h  MigrationBuffer.h
include/algorithms/island/communication/communicators/: Communicator.h  MpiCommunicator.h
include/algorithms/island/communication/serializers/: BinarySerializer.h  Serializer.h
include/algorithms/island/migration/replacers/: DemeReplacer.h  WorstReplacer.h
include/algorithms/island/migration/selectors/: DemeSelector.h  ElitismSelector.h
include/algorithms/island/topology/: BidirectionalRingTopology.h  FullyConnectedTopology.h  OneWayRingTopology.h  Topology.h
include/algorithms/standard/: CUDAEvaluator.h  StandardGA.h  StandardGACUDA.h  StandardGAParams.h
include/benchmarks/: DeJongF5Function.h  HeavyTrigFunction.h  HimmelblauFunction.h  RastriginFunction.h  SphereFunction.h
include/communication/buffers/: CircularBuffer.h
include/communication/communicators/: MpiCommunicator.h
include/core/: FitnessFunction.h  FitnessFunction.hpp  GridPopulation.h  Individual.h  Population.h
include/operators/: Crossover.h  Crossover.hpp  Mutation.h  Selection.h  Selection.hpp
include/operators/crossover/: ArithmeticCrossover.h  Crossover.h  SinglePointCrossover.h  UniformCrossover.h
include/operators/migration/: MigrationPolicy.h
include/operators/migration/replacers/: WorstReplacer.h
include/operators/migration/selectors/: ElitismSelector.h
include/operators/mutation/: BoundaryMutation.h  GaussianMutation.h  Mutation.h  UniformMutation.h
include/operators/selection/: BestNeighborSelection.h  LocalSelection.h  Selection.h  TournamentSelection.h
include/topology/: BidirectionalRingTopology.h  FullyConnectedTopology.h  OneWayRingTopology.h  Topology.h
include/utils/: AlgorithmBuilder.h  Config.h  ConfigParser.h  ConsoleLogger.h  FileLogger.h  FitnessFactory.h  FunctionalFitness.h  Loggers.h  OperatorBuilder.h  StateLogger.h
report/: main.tex  report.tex
results/: cluster_bench_results.csv
scripts/: benchmark_cuda_cpu.py  benchmark_cuda_heavy.py  benchmark_cuda_mega.py  benchmark_omp_analyze.py  benchmarks.py  visualization.py  visualization_3d.py  visualization_cellular.py  visualization_island.py
scripts/CUDA_benchmark/: results.csv
scripts/cellular-ga/: visualization_cellular.py
scripts/differential-evolution/: visualization_de.py
scripts/island-ga/: bench_cluster.py  plot_benchmark.py  visualization_island.py
scripts/standard-ga/: visualization_standard.py
scripts/standard-ga-cuda/: benchmark_cuda_cpu.py  benchmark_cuda_crossover_sweep.py
scripts/standard_ga_cuda/: benchmark.py  results.csv  visualization_standard_cuda.py
src/cuda/: StandardGACUDA.cu
tests/: CMakeLists.txt  README.md  test_standard_ga_cuda.cpp
